Import of BOBG/HTML-LoL-1.1 from CPAN.
gitpan-cpan-distribution: HTML-LoL
gitpan-cpan-version:      1.1
gitpan-cpan-path:         BOBG/HTML-LoL-1.1.tar.gz
gitpan-cpan-author:       BOBG
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -56,6 +56,11 @@ DESCRIPTION
         Reenables entity-encoding of its arguments (use it inside a
         call to `hl_noquote()').
 
+    `hl_preserve(...)'
+        Normally, HTML::LoL tries to optimize the whitespace in the
+        HTML it emits (without changing the meaning of the HTML).
+        This suppresses that behavior within its arguments.
+
     `hl_entity(NAME)'
         Includes the HTML character-entity named NAME.
 
