--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+* 1.1           21 Dec 2000
+
+  Don't use shift to parse function args.  Add hl_preserve(...).
+
 * 1.0.1         13 Dec 2000
 
   "textarea" added to %hl_pre (elements whose contents mustn't have
