--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+* 1.3           1 Apr 2002
+
+  Don't use Symbol::gensym() to create the magic tags and
+  values that control quoting etc; it was confusing
+  mod_perl.  Use a magic class instead.
+	
+* 1.2           23 Jun 2001
+
+  Return the value of the last call to the callback function from
+  hl().
+	
 * 1.1           21 Dec 2000
 
   Don't use shift to parse function args.  Add hl_preserve(...).
